@@ -1,4 +1,4 @@
-# $NetBSD: buildlink3.mk,v 1.2 2004/03/05 19:25:42 jlam Exp $
+# $NetBSD: buildlink3.mk,v 1.3 2004/03/18 09:12:16 jlam Exp $
 
 BUILDLINK_DEPTH:=	${BUILDLINK_DEPTH}+
 FLTK_BUILDLINK3_MK:=	${FLTK_BUILDLINK3_MK}+
@@ -11,7 +11,7 @@ BUILDLINK_PACKAGES:=	${BUILDLINK_PACKAGES:Nfltk}
 BUILDLINK_PACKAGES+=	fltk
 
 .if !empty(FLTK_BUILDLINK3_MK:M+)
-BUILDLINK_DEPENDS.fltk+=	fltk>=1.0.9
+BUILDLINK_DEPENDS.fltk+=	fltk>=1.1.5rc1
 BUILDLINK_PKGSRCDIR.fltk?=	../../x11/fltk
 .endif	# FLTK_BUILDLINK3_MK
 
