@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5561 2004/04/12 22:27:19 seb Exp $
+$NetBSD: CHANGES,v 1.5562 2004/04/13 09:33:51 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1936,3 +1936,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated ogmtools to 1.3 [salo 2004-04-12]
 	Added cvs2svn-0.0.0.916 [seb 2004-04-12]
 	Updated flwm to 1.0.0nb1 [xtraeme 2004-04-12]
+	Updated fltk to 1.1.5rc1 [xtraeme 2004-04-12]
